openmediavault-vdr (0.5.5) stable; urgency=low

  * VDR Log mode feature added. Default log mode for VDR is "1=errors only". Full log mode available (Closes: #7 github)
  * Instructions moved to separate info Tab (Closes: #8 github)

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 2 Jan 2014 23:05:00 -0500

openmediavault-vdr (0.5.4) stable; urgency=low

  * Postinst file modified to read original settings if they are available. (Closes: #1 github)
  * Added button to show number of detected devices (Closes: #2 github)
  * Added Channel Tab to change channel order and delete channels (Closes: #3 github)
  * Added Instructions for first time use (Closes: #5 github)
  * Added hyperlink to VDRAdmin-AM page (Closes: #5 github)
  * Fixed recording directory permissions (Closes: #6 github)

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 25 Dec 2013 23:05:00 -0500

openmediavault-vdr (0.5.3) stable; urgency=low

  * Reduce event firing

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 06 Dec 2013 20:03:08 -0500

openmediavault-vdr (0.5.2) stable; urgency=low

  * Fix rpc file to make scanning work
  * Fix module file so that Services Overview works
  * Fix mkconf script so parameters are read from the correct location and check if /var/lib/vdr/setup.conf exists
  * Fix postinst script so that vdr is not left running after installation

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 07 Dec 2013 00:13:00 +0200

openmediavault-vdr (0.5.1) stable; urgency=low

  * Fix .deb files

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 06 Dec 2013 11:48:08 -0500

openmediavault-vdr (0.5) stable; urgency=low

  * Initial release

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 04 Dec 2013 21:36:08 +0200