@@ -8,6 +8,6 @@ Standards-Version: 3.9.3
 Package: openmediavault-vdr
 Architecture: all
 Depends: openmediavault (>= 0.5), vdr, vdradmin-am, 
- vdr-plugin-xineliboutput, vdr-plugin-epgsearch, dvb-apps,
- w-scan, ${misc:Depends}
+ vdr-plugin-xineliboutput, vdr-plugin-epgsearch, vdr-plugin-live, 
+ vdr-plugin-streamdev-server, dvb-apps, w-scan, ${misc:Depends}
 Description: VDR plugin for OpenMediaVault.
