@@ -1,7 +1,9 @@
 openmediavault-vdr (0.5.5) stable; urgency=low
 
+  * vdr-plugin-streamdev-server added. (Closes: #4 github)
   * VDR Log mode feature added. Default log mode for VDR is "1=errors only". Full log mode available (Closes: #7 github)
   * Instructions moved to separate info Tab (Closes: #8 github)
+  * vdr-plugin-live added. (Closes: #9 github)
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 2 Jan 2014 23:05:00 -0500
 
